hphp/hack/test/typecheck/attributes/unnecessary_attributes.php
<?hh

final class C {
  <<__LSB>>
  private static bool $flag = false;

  <<__MemoizeLSB>>
  public static function memo(): void {}
}
